--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+== RAILS TODO LIST API
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+The point of this repo is to provide people with a simple todo list api. It is perfect for trying to practice backbone or angular and see how it works with rails.
 
-Things you may want to cover:
+I will be pushing this to a website soon. I will put a link up as soon as it is done.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Thanks! - Corey Ghilarducci
